# Lisa

./: .env  .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  ARCHITECTURE_DECISION_NOV_2025.md  AUDIT_JAN_2026.md  AUDIT_RESTRUCTURATION.md  CHANGELOG.md  CLAUDE.md  COLAB.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  FALL_DETECTION_GUIDE.md  GEMINI.md  IMPROVEMENTS.md  INFRASTRUCTURE_TODOS.md  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS_12_NOV_2025.md  MIGRATION_GUIDE.md  MOBILE_DEPLOYMENT_GUIDE.md  MOBILE_FIX_INSTRUCTIONS.md  NEXT_STEPS.md  OPENCLAW_VS_LISA_COMPARISON.md  QUICKSTART_VISION_HEARING.md  RAPPORT_AUDIT_FINAL.txt  README.md  README_AUDIT.md  TODO.md  build_log.txt  colab_report.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  (+12 more)
.claude/: settings.local.json
docs/: AI_BRIDGE_INTEGRATION.md  ARCHITECTURE.md  COMPONENTS_GUIDE.md  GATEWAY.md  Guide-Demarrage-Rapide-UE56.md  Guide-Depannage-UE56-MetaHuman.md  Guide-Installation-UE56-MetaHuman.md  MIGRATION.md  MODULES_OPENCLAW.md  README.md  UnrealEngine5.6-Integration.md  audit_tools_optimization.md
e2e/: accessibility.spec.ts  agents.spec.ts  api.spec.ts  auth.spec.ts  basic.spec.ts  chat.spec.ts  dashboard.spec.ts  gateway-debug.spec.ts  gateway.spec.ts  mobile.spec.ts  theme-switching.spec.ts  vision-benchmark.spec.ts  workflows.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
(+1336 files in other folders)
