[package]
name = "lisa"
version = "0.1.0"
description = "Lisa AI — Assistante IA bienveillante"
authors = ["Patrick Huetz"]
edition = "2021"

[lib]
name = "lisa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
